--- a/BajajSales/package.json
+++ b/BajajSales/package.json
@@ -16,7 +16,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "react-redux":"^9.1.0",
-    "react-router-dom":"^6.22.3"
+    "react-router-dom":"^6.22.3",
+    "@reduxjs/toolkit":"^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
